--- a/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
+++ b/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
@@ -12,14 +12,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trump-white" translatesAutoresizingMaskIntoConstraints="NO" id="9oG-0B-C2q">
-                    <rect key="frame" x="60" y="90" width="200" height="200"/>
+                    <rect key="frame" x="60" y="80" width="200" height="200"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="7IO-d7-9hN"/>
                         <constraint firstAttribute="height" constant="200" id="lCB-hC-0Be"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trumped" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9n-ui-zrZ">
-                    <rect key="frame" x="-40" y="265" width="400" height="51"/>
+                    <rect key="frame" x="-40" y="215" width="400" height="51"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="400" id="Obi-dw-yzb"/>
                     </constraints>
@@ -30,10 +30,10 @@
             </subviews>
             <color key="backgroundColor" red="0.53333333329999999" green="0.019607843140000001" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="9oG-0B-C2q" secondAttribute="centerY" constant="50" id="7Ts-0Z-Lez"/>
+                <constraint firstAttribute="centerY" secondItem="9oG-0B-C2q" secondAttribute="centerY" constant="60" id="7Ts-0Z-Lez"/>
                 <constraint firstAttribute="centerX" secondItem="9oG-0B-C2q" secondAttribute="centerX" id="BWM-SP-hwv"/>
                 <constraint firstAttribute="centerX" secondItem="N9n-ui-zrZ" secondAttribute="centerX" id="IC9-Vz-D1h"/>
-                <constraint firstItem="N9n-ui-zrZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="50" id="u7x-kv-KTQ"/>
+                <constraint firstItem="N9n-ui-zrZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="u7x-kv-KTQ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
