--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -72,8 +72,8 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trump-black" translatesAutoresizingMaskIntoConstraints="NO" id="fOD-s2-0vS">
-                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="share-gray" translatesAutoresizingMaskIntoConstraints="NO" id="fOD-s2-0vS">
+                            <rect key="frame" x="0.0" y="6" width="30" height="18"/>
                             <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="e6V-SR-FQN"/>
@@ -95,6 +95,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="8p6-Gv-7WO" secondAttribute="trailing" constant="10" id="7V2-9s-chx"/>
+                        <constraint firstItem="JmJ-9Y-zbU" firstAttribute="centerY" secondItem="fOD-s2-0vS" secondAttribute="centerY" id="GrN-Qi-Fve"/>
                         <constraint firstAttribute="bottom" secondItem="fOD-s2-0vS" secondAttribute="bottom" id="KHE-VK-T3z"/>
                         <constraint firstItem="R9a-B8-WKM" firstAttribute="leading" secondItem="8p6-Gv-7WO" secondAttribute="leading" constant="10" id="L4n-0L-33F"/>
                         <constraint firstItem="mnK-9n-OIn" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="top" id="NUv-jI-cWE"/>
@@ -111,6 +112,7 @@
                         <constraint firstItem="JmJ-9Y-zbU" firstAttribute="leading" secondItem="R9a-B8-WKM" secondAttribute="trailing" id="pAr-YP-xt2"/>
                         <constraint firstAttribute="bottom" secondItem="JmJ-9Y-zbU" secondAttribute="bottom" id="rKz-At-379"/>
                         <constraint firstItem="fOD-s2-0vS" firstAttribute="leading" secondItem="Npz-By-jUS" secondAttribute="leading" id="sDE-Ag-3LS"/>
+                        <constraint firstItem="fOD-s2-0vS" firstAttribute="height" secondItem="8p6-Gv-7WO" secondAttribute="height" multiplier="0.8" id="sIF-yZ-aJT"/>
                         <constraint firstAttribute="height" constant="30" id="xqV-zx-6ix"/>
                         <constraint firstItem="fOD-s2-0vS" firstAttribute="leading" secondItem="mnK-9n-OIn" secondAttribute="trailing" id="yIL-Di-58I"/>
                         <constraint firstAttribute="bottom" secondItem="8p6-Gv-7WO" secondAttribute="bottom" constant="4" id="z1Z-aC-trc"/>
@@ -119,6 +121,8 @@
                         <mask key="constraints">
                             <exclude reference="RBV-bV-x2H"/>
                             <exclude reference="pAr-YP-xt2"/>
+                            <exclude reference="KHE-VK-T3z"/>
+                            <exclude reference="awx-W0-7Fc"/>
                             <exclude reference="yIL-Di-58I"/>
                         </mask>
                     </variation>
@@ -141,19 +145,19 @@
                     <subviews>
                         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rTx-Mv-mme" userLabel="Row 1">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.76986663510101006" green="0.76986663510101006" blue="0.76986663510101006" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVQ-bV-okK" userLabel="Row 2">
                             <rect key="frame" x="0.0" y="42" width="320" height="42"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.76986663510101006" green="0.76986663510101006" blue="0.76986663510101006" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6S-JF-h7U" userLabel="Row 3">
                             <rect key="frame" x="0.0" y="84" width="320" height="42"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.76986663510101006" green="0.76986663510101006" blue="0.76986663510101006" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJa-mM-82E" userLabel="Row 4">
                             <rect key="frame" x="0.0" y="126" width="320" height="42"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.76986663510101006" green="0.76986663510101006" blue="0.76986663510101006" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                     </subviews>
                     <constraints>
@@ -339,6 +343,6 @@
     <resources>
         <image name="arrow-white-vectorized" width="300" height="300"/>
         <image name="globe-white-vectorized" width="300" height="300"/>
-        <image name="trump-black" width="2083" height="2083"/>
+        <image name="share-gray" width="128" height="128"/>
     </resources>
 </document>
